FIX: Videos align
FIX: Alinhamento do componente de vídeo para se limitar ao tamanho dos textos ao invés de usar o limite máximo.

--- a/src/app/components/home-servicos/home-servicos.component.scss
+++ b/src/app/components/home-servicos/home-servicos.component.scss
@@ -9,6 +9,13 @@
 
     .solutions-heading {
         font-size: 3rem;
+        text-align: center;
+
+        padding: 0 64px;
+
+        @media screen and (max-width: 479px) {
+            padding: 0 32px
+        }
     }
 
     .solutions-container {
